Remove phone number

--- a/src/layouts/main.hbs
+++ b/src/layouts/main.hbs
@@ -48,7 +48,7 @@
 				</div>
 			</div>
 			<div class="footer">
-				<span class="footer-line">{{tel}}</span><span class="footer-separator"> | </span><span class="footer-line"><a href="mailto:hello@deft.design">hello@deft.design</a></span>
+				<span class="footer-line"><a href="mailto:hello@deft.design">hello@deft.design</a></span>
 			</div>
 		</div>
 		<script src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script>
